[package]
name = "calico"
description = "A parser, printer, and data model for iCalendar."
repository = "https://github.com/eikopf/calico"
keywords = ["icalendar", "ical", "ics", "calendar", "rfc5545"]
categories = ["date-and-time", "encoding", "parser-implementations"]
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
hashbrown = "0.15.5"
paste = "1.0.15"
smallvec = "1.15.1"
winnow = "0.7.10"

[features]
memchr = ["winnow/simd"]
